build_log.txt

> ristrutturissima_demo@0.1.0 build
> next build

▲ Next.js 16.1.6 (Turbopack)

  Creating an optimized production build ...
Error: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    [2m[at onInvalidCandidate (E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:21:1314)][0m
    [2m[at Te (E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:16:36652)][0m
    [2m[at E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:21:355][0m
    [2m[at Rr (E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:3:1718)][0m
    [2m[at _ (E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:3:1377)][0m
    [2m[at $e (E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:21:172)][0m
    [2m[at un (E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:38:294)][0m
    [2m[at process.processTicksAndRejections (node:internal/process/task_queues:105:5)][0m
    [2m[at async cn (E:\SteamLibrary\ristrutturissima_demo\node_modules\tailwindcss\dist\lib.js:38:631)][0m
    [2m[at async Xr (E:\SteamLibrary\ristrutturissima_demo\node_modules\@tailwindcss\node\dist\index.js:10:3417)][0m

> Build error occurred
Error: Turbopack build failed with 2 errors:
./app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: E:\SteamLibrary\ristrutturissima_demo\app\globals.css:1:1: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    at Input.error (node_modules/postcss/lib/input.js:135:16) [E:\SteamLibrary\ristrutturissima_demo\.next\build\chunks\node_modules_fe693df6._.js:4651:22]
    at Root.error (node_modules/postcss/lib/node.js:146:32) [E:\SteamLibrary\ristrutturissima_demo\.next\build\chunks\node_modules_fe693df6._.js:928:38]
    [at Object.Once (E:\SteamLibrary\ristrutturissima_demo\node_modules\@tailwindcss\postcss\dist\index.js:10:6911)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:105:5)]
    at async LazyResult.runAsync (node_modules/postcss/lib/lazy-result.js:293:11) [E:\SteamLibrary\ristrutturissima_demo\.next\build\chunks\node_modules_fe693df6._.js:6206:21]
    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [E:\SteamLibrary\ristrutturissima_demo\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36]
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [E:\SteamLibrary\ristrutturissima_demo\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31]

Import trace:
  Client Component Browser:
    ./app/globals.css [Client Component Browser]
    ./app/layout.tsx [Server Component]


./components/dashboard/DashboardLayout.tsx:15:1
Module not found: Can't resolve '@/components/ui/sheet'
[0m [90m 13 |[39m } [36mfrom[39m [32m'lucide-react'[39m[33m;[39m
 [90m 14 |[39m [36mimport[39m [33mReact[39m[33m,[39m { useState } [36mfrom[39m [32m'react'[39m[33m;[39m
[31m[1m>[22m[39m[90m 15 |[39m [36mimport[39m { [33mSheet[39m[33m,[39m [33mSheetContent[39m[33m,[39m [33mSheetTrigger[39m } [36mfrom[39m [32m'@/components/ui/sheet'[39m[33m;[39m
 [90m    |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 16 |[39m
 [90m 17 |[39m [36minterface[39m [33mDashboardLayoutProps[39m {
 [90m 18 |[39m     children[33m:[39m [33mReact[39m[33m.[39m[33mReactNode[39m[33m;[39m[0m

Import map: aliased to relative './components/ui/sheet' inside of [project]/


Import traces:
  Client Component Browser:
    ./components/dashboard/DashboardLayout.tsx [Client Component Browser]
    ./app/page.tsx [Client Component Browser]
    ./app/page.tsx [Server Component]

  Client Component SSR:
    ./components/dashboard/DashboardLayout.tsx [Client Component SSR]
    ./app/page.tsx [Client Component SSR]
    ./app/page.tsx [Server Component]

https://nextjs.org/docs/messages/module-not-found


    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [E:\SteamLibrary\ristrutturissima_demo\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36])
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [E:\SteamLibrary\ristrutturissima_demo\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31])
    at <unknown> (./components/dashboard/DashboardLayout.tsx:15:1)
    at <unknown> (https://nextjs.org/docs/messages/module-not-found)
